--- a/style.css
+++ b/style.css
@@ -1,53 +1,53 @@
 * {
-	margin: 0
-
+	margin: 0;
+}
 
 body {
-	font-family: 'PT Sans Nrrow', sans-serif;
-	line-heiht: 180;
+	font-family: 'PT Sans Narrow', sans-serif;
+	line-height: 180%;
 }
 
- wrap
-	width 700xp;
-	margin 10px avto;
+.wrap {
+	width: 700px;
+	margin: 10px auto;
 }
 
-#main-img {
-	widh: 100;
-	marg n: 20 px 0;
+.main-img {
+	width: 100%;
+	margin: 20px 0;
 }
 
-h1 {
-	txt-aling: centre;
-	marrgin-top 30x;
-	border-bottom: 1px dotted 333;
-	padding-b0ttom 30px;
+h2 {
+	text-align: center;
+	margin-top: 30px;
+	border-bottom: 1px dotted #333;
+	padding-bottom: 30px;
 }
 
 p {
 	margin: 20px 0;
-	text-indent: 30px
-	text-aline: justify;
+	text-indent: 30px;
+	text-align: justify;
 }
 
 strong {
-	c0lor: #z0099FF;
+	color: #0099FF;
 }
 
-#owl {
+.owl {
 	float: right;
-	margin: 10 px 10px 10 px 30xp;
+	margin: 10px 10px 10px 30px;
 }
 
 figcaption {
-	text-aligne: centre;
-	font-stile: italice;
-	col0r: 0099FF;
-
-
-.foter {
-	background: #zz0099FF;
 	text-align: center;
-	pading: 20px;
-	c0lor: fff;
+	font-style: italic;
+	color: #0099FF;
+}
+
+.footer {
+	background: #0099FF;
+	text-align: center;
+	padding: 20px;
+	color: #fff;
 }
